--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "archiver": "^3.0.3",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "figlet": "^1.2.3",
